fix spacing problem for small screen

--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,8 @@ a:hover {
     }
 
     .section-description {
-        padding-left: 20px;
+        padding-left: 30px !important;
+        border-left: 0px;
     }
 
     header {
